# UDebugger

./: CMakeLists.txt  README.md
DebuggerInterfaces/: CMakeLists.txt  DebugDatabase.cpp  DebugDatabase.h  DebugInstrumentation.h  DebugLog.cpp  DebugLog.h  DebugType.h  IClassDescriptor.h  IDebugObject.cpp  IDebugObject.h  IDebugVariable.h  IDeserializer.h  IInterfacePropertyEditor.h  ISerializer.h  ScopedInstrumentation.cpp  TDebugDerivedObject.h  TDebugDescriptor.h  TDebugObject.h  TDebugVariable.h  TVarInfo.h  classInfo.h  debugger_global.h
QtDebugProtocol/: CMakeLists.txt  DebugDeserializer.cpp  DebugDeserializer.h  DebugProtocol.cpp  DebugProtocol.h  DebugSerializer.cpp  DebugSerializer.h  PacketProcessing.cpp  PacketProcessing.h  debugprotocol_global.h
QtDebuggerServer/: CMakeLists.txt  DebugConnection.cpp  DebugConnection.h  QDebuggerServer.cpp  QDebuggerServer.h  qdebuggerserver_global.h
QtModels/: CMakeLists.txt  ITreeNode.cpp  ITreeNode.h  TreeModel.cpp  TreeModel.h  qtmodels_global.h
TestApp/: CMakeLists.txt  DebuggedApp.cpp  DebuggedApp.h  DebuggedApp.qrc  DebuggedApp.ui  TestDebugClass.cpp  TestDebugClass.h  TestDebugDerivedClass.cpp  TestDebugDerivedClass.h  main.cpp
UniversalDebugger/: CMakeLists.txt  ColorationEditor.cpp  ColorationEditor.h  ColorationEditor.ui  DebugClassTreeModel.cpp  DebugClassTreeModel.h  DebugClientConnection.cpp  DebugClientConnection.h  DebugCompare.cpp  DebugCompare.h  DebugCompare.ui  DebugExplorer.cpp  DebugExplorer.h  DebugExplorer.ui  DebugFilter.cpp  DebugFilter.h  DebugFilter.ui  DebugHierarchyTreeModel.cpp  DebugHierarchyTreeModel.h  DebugObjectModelNode.cpp  DebugObjectModelNode.h  DebugProperties.cpp  DebugProperties.h  DebugWorkspace.cpp  DebugWorkspace.h  DebuggerUI.cpp  DebuggerUI.h  DebuggerUI.qrc  DebuggerUI.ui  ExplorerTreeView.cpp  ExplorerTreeView.h  defines.h  main.cpp
wiki/: documentation.md
wiki/graph/: architecture_debugger.graphml  descriptor.graphml  serialize.graphml
